# django_challenge

./: README.md  pyproject.toml
common/: utils.py
config/: authentication.py  settings.py  urls.py
tweet/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_alter_like_tweet_alter_like_user_alter_tweet_user.py  0002_initial.py
tweet/templates/: all_tweet.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: user_not_found.html  user_tweets.html
