[tool.poetry]
name = "django-challenge"
version = "0.1.0"
description = ""
authors = ["dev-sigi <kangsik@korea.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
mysqlclient = "^2.2.5"
djangorestframework = "^3.15.2"
pyjwt = "^2.9.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
